feat: Add map layer to page, fix: 'fix font files'

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
   <title></title>
-  <meta name="author" content="The Pathfinders Team"><link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-  integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-  crossorigin="" />
+  <meta name="author" content="The Pathfinders Team">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-  integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-  crossorigin=""></script>
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
 </head>
 
 <body class="page">
@@ -103,7 +104,7 @@
       </div>
 
       <div class="main-info__right">
-        <div class="map">
+        <div id="map">
           <p>Here will be the map!</p>
         </div>
       </div>
@@ -141,17 +142,13 @@
         <a href="https://www.doctolib.fr/" class="footer__link" target=”_blank”>
           <img src="./images/link2.svg" alt="Link to Doctolib">
         </a>
-<<<<<<< HEAD
-        <a href="https://t.me/corona_impftermine_ber" class="footer__link" target=”_blank”>
-          <img src="./images/link3.svg" alt="Link to Telegram bot">
-=======
         <a href="https://telegram.org/?setln=en" class="footer__link" target=”_blank”>
           <img src="./images/link3.svg" alt="Link to Telegram">
->>>>>>> eea5844c85041c3db6336fdb3841ce8c90146b81
         </a>
       </div>
     </div>
   </footer>
+  <script src="./pages/index.js"></script>
 </body>
 
 </html>
