Map height amd News sections redo!

--- a/index.html
+++ b/index.html
@@ -132,58 +132,70 @@
         <div class="last-news__container">
           <div class="last-news__container-line">
             <div class="last-news__news-box">
-              <a href="#" class="last-news__source">
-                <img class="last-news__source-image" src="./images/source.svg" alt="source image">
-                <p class="last-news__source-title">Source</p>
-              </a>
+              <div class="last-news__source">
+                <a href="#" class="last-news__source-box">
+                  <img class="last-news__source-image" src="./images/source.svg" alt="source image">
+                  <p class="last-news__source-title">Source</p>
+                </a>
+                <p class="last-news__publication">2 hours ago</p>
+              </div>
               <div class="last-news__news">
-                <p class="last-news__news-title">Title</p>
+                <a href="#" class="last-news__news-title">Title</a>
                 <p class="last-news__news-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
+                <a href="#" class="last-news__read-more">read more...</a>
               </div>
-              <p class="last-news__publication">2 hours ago</p>
             </div>
             <div class="last-news__news-box">
-              <a href="#" class="last-news__source">
-                <img class="last-news__source-image" src="./images/source.svg" alt="source image">
-                <p class="last-news__source-title">Source</p>
-              </a>
+              <div class="last-news__source">
+                <a href="#" class="last-news__source-box">
+                  <img class="last-news__source-image" src="./images/source.svg" alt="source image">
+                  <p class="last-news__source-title">Source</p>
+                </a>
+                <p class="last-news__publication">2 hours ago</p>
+              </div>
               <div class="last-news__news">
-                <p class="last-news__news-title">Title</p>
+                <a href="#" class="last-news__news-title">Title</a>
                 <p class="last-news__news-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
+                <a href="#" class="last-news__read-more">read more...</a>
               </div>
-              <p class="last-news__publication">2 hours ago</p>
             </div>
           </div>
           <div class="last-news__container-line">
             <div class="last-news__news-box">
-              <a href="#" class="last-news__source">
-                <img class="last-news__source-image" src="./images/source.svg" alt="source image">
-                <p class="last-news__source-title">Source</p>
-              </a>
+              <div class="last-news__source">
+                <a href="#" class="last-news__source-box">
+                  <img class="last-news__source-image" src="./images/source.svg" alt="source image">
+                  <p class="last-news__source-title">Source</p>
+                </a>
+                <p class="last-news__publication">2 hours ago</p>
+              </div>
               <div class="last-news__news">
-                <p class="last-news__news-title">Title</p>
+                <a href="#" class="last-news__news-title">Title</a>
                 <p class="last-news__news-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
+                <a href="#" class="last-news__read-more">read more...</a>
               </div>
-              <p class="last-news__publication">2 hours ago</p>
             </div>
             <div class="last-news__news-box">
-              <a href="#" class="last-news__source">
-                <img class="last-news__source-image" src="./images/source.svg" alt="source image">
-                <p class="last-news__source-title">Source</p>
-              </a>
+              <div class="last-news__source">
+                <a href="#" class="last-news__source-box">
+                  <img class="last-news__source-image" src="./images/source.svg" alt="source image">
+                  <p class="last-news__source-title">Source</p>
+                </a>
+                <p class="last-news__publication">2 hours ago</p>
+              </div>
               <div class="last-news__news">
-                <p class="last-news__news-title">Title</p>
+                <a href="#" class="last-news__news-title">Title</a>
                 <p class="last-news__news-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
+                <a href="#" class="last-news__read-more">read more...</a>
               </div>
-              <p class="last-news__publication">2 hours ago</p>
             </div>
           </div>
         </div>
