Header and Cities panel sections redo!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="page">
   <header class="header">
     <div class="header__logo">
-      LOGO
+      <img src="./images/logo.svg" alt="site logo">
     </div>
     <div class="header__right-side">
       <ul class="header__menu">
@@ -51,7 +51,8 @@
     <div class="top-panel">
       <ul class="cities-panel">
         <li class="cities-panel__city cities-panel__city_active">
-          <a href="#" class="cities-panel__link">BERLIN</a>
+          <a href="#" class="cities-panel__link">Berlin</a>
+          <div class="cities-panel__city_active_underline"></div>
         </li>
 
         <li class="cities-panel__city">
@@ -67,8 +68,7 @@
         </li>
       </ul>
       <div class="add-city">
-        <img class="add-city__icon" src="./images/add-icon.svg" alt="Add city icon">
-        <p class="add-city__text">Add new city</p>
+        <p class="add-city__text">Add city</p>
       </div>
     </div>
 
