--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
   <main class="content">
     <div class="top-panel">
       <ul class="cities-panel">
-        <li class="cities-panel__city cities-panel__city_active">
+        <li class="cities-panel__city cities-panel__city_active" onclick="">
           <a href="#" class="cities-panel__link">BERLIN</a>
         </li>
 
-        <li class="cities-panel__city">
+        <li class="cities-panel__city" onclick="">
           <a href="#" class="cities-panel__link">Moscow</a>
         </li>
 
-        <li class="cities-panel__city">
+        <li class="cities-panel__city" onclick="">
           <a href="#" class="cities-panel__link">Jerusalem</a>
         </li>
 
-        <li class="cities-panel__city">
+        <li class="cities-panel__city" onclick="">
           <a href="#" class="cities-panel__link">London</a>
         </li>
       </ul>
@@ -91,15 +91,15 @@
           <p class="report__title">Report from 04.10.2021</p>
           <div class="report__box">
             <p class="report__text">Total cases</p>
-            <p class="report__numbers">207.160 (+24)</p>
+            <p class="report__numbers report__numbers_total"></p>
           </div>
           <div class="report__box">
             <p class="report__text">Recovered</p>
-            <p class="report__numbers">196.423 (+182)</p>
+            <p class="report__numbers report__numbers_recovered"></p>
           </div>
           <div class="report__box">
             <p class="report__text">Deceased</p>
-            <p class="report__numbers">3.628 (0)</p>
+            <p class="report__numbers report__numbers_death"></p>
           </div>
         </div>
       </div>
@@ -131,74 +131,12 @@
         <p class="last-news__title">Last news</p>
         <div class="last-news__container">
           <div class="last-news__container-line">
-            <div class="last-news__news-box">
-              <div class="last-news__source">
-                <a href="#" class="last-news__source-box">
-                  <img class="last-news__source-image" src="./images/source.svg" alt="source image">
-                  <p class="last-news__source-title">Source</p>
-                </a>
-                <p class="last-news__publication">2 hours ago</p>
-              </div>
-              <div class="last-news__news">
-                <a href="#" class="last-news__news-title">Title</a>
-                <p class="last-news__news-paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <a href="#" class="last-news__read-more">read more...</a>
-              </div>
-            </div>
-            <div class="last-news__news-box">
-              <div class="last-news__source">
-                <a href="#" class="last-news__source-box">
-                  <img class="last-news__source-image" src="./images/source.svg" alt="source image">
-                  <p class="last-news__source-title">Source</p>
-                </a>
-                <p class="last-news__publication">2 hours ago</p>
-              </div>
-              <div class="last-news__news">
-                <a href="#" class="last-news__news-title">Title</a>
-                <p class="last-news__news-paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <a href="#" class="last-news__read-more">read more...</a>
-              </div>
-            </div>
+
+
           </div>
-          <div class="last-news__container-line">
-            <div class="last-news__news-box">
-              <div class="last-news__source">
-                <a href="#" class="last-news__source-box">
-                  <img class="last-news__source-image" src="./images/source.svg" alt="source image">
-                  <p class="last-news__source-title">Source</p>
-                </a>
-                <p class="last-news__publication">2 hours ago</p>
-              </div>
-              <div class="last-news__news">
-                <a href="#" class="last-news__news-title">Title</a>
-                <p class="last-news__news-paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <a href="#" class="last-news__read-more">read more...</a>
-              </div>
-            </div>
-            <div class="last-news__news-box">
-              <div class="last-news__source">
-                <a href="#" class="last-news__source-box">
-                  <img class="last-news__source-image" src="./images/source.svg" alt="source image">
-                  <p class="last-news__source-title">Source</p>
-                </a>
-                <p class="last-news__publication">2 hours ago</p>
-              </div>
-              <div class="last-news__news">
-                <a href="#" class="last-news__news-title">Title</a>
-                <p class="last-news__news-paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <a href="#" class="last-news__read-more">read more...</a>
-              </div>
-            </div>
-          </div>
+
         </div>
+      </div>
       </div>
     </container>
   </main>
@@ -220,6 +158,24 @@
     </div>
   </footer>
   <script src="./pages/index.js"></script>
+  <template class="news-template">
+    <div class="last-news__news-box">
+      <div class="last-news__source">
+        <a href="#" class="last-news__source-box">
+          <img class="last-news__source-image" src="./images/source.svg" alt="source image">
+          <p class="last-news__source-title"></p>
+        </a>
+        <p class="last-news__publication"></p>
+      </div>
+      <div class="last-news__news">
+        <a href="#" class="last-news__news-title"></a>
+        <p class="last-news__news-paragraph">
+
+        </p>
+        <a href="#" class="last-news__read-more">read more...</a>
+      </div>
+    </div>
+  </template>
 </body>
 
 </html>
