Header and Cities panel sections redo!

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <li>
           <a href="#" class="header__link">Healthy diary</a>
         </li>
+        <li class="header__user">
+          <a href="#">
+            <img src="./images/user.svg" alt="User image">
+          </a>
+        </li>
       </ul>
-      <div class="header__user">
-        <a href="#">
-          <img src="./images/user.svg" alt="User image">
-        </a>
-      </div>
     </div>
   </header>
 
