Header and News sections lil redo!

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title></title>
   <meta name="author" content="The Pathfinders Team">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 </head>
 
 <body class="page">
@@ -48,7 +44,7 @@
   </header>
 
   <main class="content">
-    <div class="top-panel">
+    <container class="top-panel">
       <ul class="cities-panel">
         <li class="cities-panel__city cities-panel__city_active">
           <a href="#" class="cities-panel__link">Berlin</a>
@@ -70,7 +66,7 @@
       <div class="add-city">
         <p class="add-city__text">Add city</p>
       </div>
-    </div>
+    </container>
 
     <container class="main-info">
       <div class="main-info__left">
