Report section redo!

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="report">
-          <p class="report__title">Report from 04.10.2021</p>
+          <p class="report__title">Report from <script>document.write(new Date().toLocaleDateString('en-GB'));</script></p>
           <div class="report__box">
             <p class="report__text">Total cases</p>
             <p class="report__numbers report__numbers_total"></p>
