Header section redo!

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     </div>
     <div class="header__right-side">
       <ul class="header__menu">
-        <li class="">
-          <a href="#" class="header__link header__link_active">Main page</a>
+        <li class="header__link">
+          <a href="#" class="header__link-text header__link-text_active">Home</a>
         </li>
 
-        <li>
-          <a href="#" class="header__link">Test results</a>
+        <li class="header__link">
+          <a href="#" class="header__link-text">Certification</a>
         </li>
 
-        <li>
-          <a href="#" class="header__link">For travelers</a>
+        <li class="header__link">
+          <a href="#" class="header__link-text">For travelers</a>
         </li>
 
-        <li>
-          <a href="#" class="header__link">Healthy diary</a>
+        <li class="header__link">
+          <a href="#" class="header__link-text">Healthy diary</a>
         </li>
         <li class="header__user">
           <a href="#">
