All needed buttons faked and certification page is almost done!

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="header__right-side">
       <ul class="header__menu">
         <li class="header__link">
-          <a href="#" class="header__link-text header__link-text_active">Home</a>
+          <a href="index.html" class="header__link-text header__link-text_active">Home</a>
         </li>
 
         <li class="header__link">
-          <a href="#" class="header__link-text">Certification</a>
+          <a href="certification.html" class="header__link-text">Certification</a>
         </li>
 
         <li class="header__link">
