JS: done fetching articles!

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       </div>
     </div>
   </footer>
-  <script src="./pages/index.js"></script>
-  <template class="news-template">
+
+  <template class="news-template" id="news-template">
     <div class="last-news__news-box">
       <div class="last-news__source">
         <a href="#" class="last-news__source-box">
@@ -172,6 +172,8 @@
       </div>
     </div>
   </template>
+
+  <script src="./pages/index.js"></script>
 </body>
 
 </html>
