Certification page done!

--- a/certification.html
+++ b/certification.html
@@ -43,11 +43,13 @@
 
   <main class="content">
     <container class="hotline">
-      <p class="hotline__title">Covid-19 hotline</p>
-      <p class="hotline__workhours">8:00 – 20:00 Uhr</p>
-      <div class="hotline__box">
-        <img class="hotline__icon" src="./images/phone.svg" alt="phone icon">
-        <p class="hotline__phone">030 9028 – 2828</p>
+      <div class="hotline__container">
+        <p class="hotline__title">Covid-19 hotline</p>
+        <p class="hotline__workhours">8:00 – 20:00 Uhr</p>
+        <div class="hotline__box">
+          <img class="hotline__icon" src="./images/phone.svg" alt="phone icon">
+          <p class="hotline__phone">030 9028 – 2828</p>
+        </div>
       </div>
     </container>
 
@@ -77,8 +79,7 @@
               <div class="test-results__line-left">
                 <div class="test-results__line-textbox">
                   <p class="test-results__line-title">Expires at</p>
-                  <p class="test-results__line-text">08.10.2021
-                    12:05 pm</p>
+                  <p class="test-results__line-text">08.10.2021 12:05 pm</p>
                 </div>
                 <div class="test-results__line-textbox">
                   <p class="test-results__line-title">Testing lab</p>
