Stats API reowrk, Reporter redo!

--- a/certification.html
+++ b/certification.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/certification.css">
-  <title></title>
+  <title>Helper: Certification</title>
   <meta name="author" content="The Pathfinders Team">
 </head>
 
