--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css" media="all">
-  <title>Helper</title>
+  <title>Helper: Main page</title>
   <meta name="author" content="The Pathfinders Team">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
@@ -85,11 +85,11 @@
 
         <div class="report">
           <p class="report__title">Report from <script>document.write(new Date().toLocaleDateString('en-GB'));</script></p>
-          <div class="report__box">
+          <div class="report__box" id="total" onclick="totalColor()">
             <p class="report__text">Total cases</p>
             <p class="report__numbers report__numbers_total"></p>
           </div>
-          <div class="report__box">
+          <div class="report__box" id="recoverd" onclick="recoverdColor()">
             <p class="report__text">Recovered</p>
             <p class="report__numbers report__numbers_recovered"></p>
           </div>
