feat: finish maps for other cities and get covid stats for other cities

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <container class="top-panel">
       <ul class="cities-panel">
         <li class="cities-panel__city cities-panel__city_active">
-          <a href="#" class="cities-panel__link">Berlin</a>
-          <div class="cities-panel__city_active_underline"></div>
+          <a href="#" class="cities-panel__link cities-panel__link_ber">Berlin</a>
+
         </li>
 
         <li class="cities-panel__city">
